$ lowered chance to get I have spoken state to 10% § auto translate now inactive as defaukt § Translate button aligns noew on the left side to avoid position jumping depending on the translated text length

--- a/Shared/Controls/TranslateButton.razor.css
+++ b/Shared/Controls/TranslateButton.razor.css
@@ -1,5 +1,5 @@
 ﻿div {
-	justify-content: right;
+	justify-content: left;
 	text-align: right;
 }
 
